# Depth-Estimation-Algoritm-with-Stereo-Camera

./: README.md  stereo_camers.urdf  stereo_world.sdf
install/: local_setup.sh  setup.sh
install/stereo_depth_estimator/lib/stereo_depth_estimator/: stereo_depth_node
install/stereo_depth_estimator/share/ament_index/resource_index/package_run_dependencies/: stereo_depth_estimator
install/stereo_depth_estimator/share/ament_index/resource_index/parent_prefix_path/: stereo_depth_estimator
install/stereo_depth_estimator/share/stereo_depth_estimator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/stereo_depth_estimator/share/stereo_depth_estimator/cmake/: stereo_depth_estimatorConfig-version.cmake  stereo_depth_estimatorConfig.cmake
install/stereo_depth_estimator/share/stereo_depth_estimator/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/stereo_depth_estimator/: CMakeLists.txt
src/stereo_depth_estimator/src/: stereo_depth_node.cpp
